--- a/DataValidationExtensions.uplugin
+++ b/DataValidationExtensions.uplugin
@@ -26,5 +26,11 @@
       "Type": "Editor",
       "LoadingPhase": "Default"
     }
+  ],
+  "Plugins": [
+    {
+      "Name": "DataValidation",
+      "Enabled": true
+    }
   ]
 }
